green/src/edu/ucsb/cs/vlab/KaluzaABCParser.java
package edu.ucsb.cs.vlab;

// Generated from KaluzaABC.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KaluzaABCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAR=1, RPAR=2, SET_LOGIC=3, LOGIC_KIND=4, DECLARE_FUN=5, TYPE_STRING=6, 
		CHECK_SAT=7, ASSERT=8, NOT=9, AND=10, IN=11, CONCAT=12, LEN=13, EQ=14, 
		LT=15, GT=16, LEQ=17, GEQ=18, ID=19, INT=20, WS=21, STRING=22, REGEX=23;
	public static final int
		RULE_kaluzaFile = 0, RULE_command = 1, RULE_setLogic = 2, RULE_checkSat = 3, 
		RULE_declareFun = 4, RULE_assertion = 5, RULE_boolExpr = 6, RULE_stringExpr = 7, 
		RULE_intExpr = 8, RULE_notExpr = 9, RULE_andExpr = 10, RULE_inExpr = 11, 
		RULE_strEqualityExpr = 12, RULE_intEqualityExpr = 13, RULE_ltExpr = 14, 
		RULE_gtExpr = 15, RULE_leqExpr = 16, RULE_geqExpr = 17, RULE_concatExpr = 18, 
		RULE_lenExpr = 19, RULE_stringVarName = 20, RULE_stringLiteral = 21, RULE_regexLiteral = 22, 
		RULE_intLiteral = 23;
	public static final String[] ruleNames = {
		"kaluzaFile", "command", "setLogic", "checkSat", "declareFun", "assertion", 
		"boolExpr", "stringExpr", "intExpr", "notExpr", "andExpr", "inExpr", "strEqualityExpr", 
		"intEqualityExpr", "ltExpr", "gtExpr", "leqExpr", "geqExpr", "concatExpr", 
		"lenExpr", "stringVarName", "stringLiteral", "regexLiteral", "intLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'set-logic'", "'QF_S'", "'declare-fun'", "'String'", 
		"'check-sat'", "'assert'", "'not'", "'and'", "'in'", "'concat'", "'len'", 
		"'='", "'<'", "'>'", "'<='", "'>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LPAR", "RPAR", "SET_LOGIC", "LOGIC_KIND", "DECLARE_FUN", "TYPE_STRING", 
		"CHECK_SAT", "ASSERT", "NOT", "AND", "IN", "CONCAT", "LEN", "EQ", "LT", 
		"GT", "LEQ", "GEQ", "ID", "INT", "WS", "STRING", "REGEX"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KaluzaABC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KaluzaABCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class KaluzaFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KaluzaABCParser.EOF, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public KaluzaFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kaluzaFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterKaluzaFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitKaluzaFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitKaluzaFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KaluzaFileContext kaluzaFile() throws RecognitionException {
		KaluzaFileContext _localctx = new KaluzaFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_kaluzaFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAR) {
				{
				{
				setState(48);
				command();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public SetLogicContext setLogic() {
			return getRuleContext(SetLogicContext.class,0);
		}
		public DeclareFunContext declareFun() {
			return getRuleContext(DeclareFunContext.class,0);
		}
		public AssertionContext assertion() {
			return getRuleContext(AssertionContext.class,0);
		}
		public CheckSatContext checkSat() {
			return getRuleContext(CheckSatContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				setLogic();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				declareFun();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				assertion();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				checkSat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetLogicContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode SET_LOGIC() { return getToken(KaluzaABCParser.SET_LOGIC, 0); }
		public TerminalNode LOGIC_KIND() { return getToken(KaluzaABCParser.LOGIC_KIND, 0); }
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public SetLogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setLogic; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterSetLogic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitSetLogic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitSetLogic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetLogicContext setLogic() throws RecognitionException {
		SetLogicContext _localctx = new SetLogicContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_setLogic);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(LPAR);
			setState(63);
			match(SET_LOGIC);
			setState(64);
			match(LOGIC_KIND);
			setState(65);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CheckSatContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode CHECK_SAT() { return getToken(KaluzaABCParser.CHECK_SAT, 0); }
		public StringVarNameContext stringVarName() {
			return getRuleContext(StringVarNameContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public CheckSatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checkSat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterCheckSat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitCheckSat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitCheckSat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CheckSatContext checkSat() throws RecognitionException {
		CheckSatContext _localctx = new CheckSatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_checkSat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(LPAR);
			setState(68);
			match(CHECK_SAT);
			setState(69);
			stringVarName();
			setState(70);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareFunContext extends ParserRuleContext {
		public List<TerminalNode> LPAR() { return getTokens(KaluzaABCParser.LPAR); }
		public TerminalNode LPAR(int i) {
			return getToken(KaluzaABCParser.LPAR, i);
		}
		public TerminalNode DECLARE_FUN() { return getToken(KaluzaABCParser.DECLARE_FUN, 0); }
		public StringVarNameContext stringVarName() {
			return getRuleContext(StringVarNameContext.class,0);
		}
		public List<TerminalNode> RPAR() { return getTokens(KaluzaABCParser.RPAR); }
		public TerminalNode RPAR(int i) {
			return getToken(KaluzaABCParser.RPAR, i);
		}
		public TerminalNode TYPE_STRING() { return getToken(KaluzaABCParser.TYPE_STRING, 0); }
		public DeclareFunContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareFun; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterDeclareFun(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitDeclareFun(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitDeclareFun(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareFunContext declareFun() throws RecognitionException {
		DeclareFunContext _localctx = new DeclareFunContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declareFun);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(LPAR);
			setState(73);
			match(DECLARE_FUN);
			setState(74);
			stringVarName();
			setState(75);
			match(LPAR);
			setState(76);
			match(RPAR);
			setState(77);
			match(TYPE_STRING);
			setState(78);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssertionContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode ASSERT() { return getToken(KaluzaABCParser.ASSERT, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterAssertion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitAssertion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitAssertion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(LPAR);
			setState(81);
			match(ASSERT);
			setState(82);
			boolExpr();
			setState(83);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolExprContext extends ParserRuleContext {
		public NotExprContext notExpr() {
			return getRuleContext(NotExprContext.class,0);
		}
		public AndExprContext andExpr() {
			return getRuleContext(AndExprContext.class,0);
		}
		public InExprContext inExpr() {
			return getRuleContext(InExprContext.class,0);
		}
		public StrEqualityExprContext strEqualityExpr() {
			return getRuleContext(StrEqualityExprContext.class,0);
		}
		public IntEqualityExprContext intEqualityExpr() {
			return getRuleContext(IntEqualityExprContext.class,0);
		}
		public LtExprContext ltExpr() {
			return getRuleContext(LtExprContext.class,0);
		}
		public GtExprContext gtExpr() {
			return getRuleContext(GtExprContext.class,0);
		}
		public LeqExprContext leqExpr() {
			return getRuleContext(LeqExprContext.class,0);
		}
		public GeqExprContext geqExpr() {
			return getRuleContext(GeqExprContext.class,0);
		}
		public BoolExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterBoolExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitBoolExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitBoolExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolExprContext boolExpr() throws RecognitionException {
		BoolExprContext _localctx = new BoolExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_boolExpr);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				notExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				andExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				inExpr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				strEqualityExpr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				intEqualityExpr();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				ltExpr();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(91);
				gtExpr();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(92);
				leqExpr();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(93);
				geqExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringExprContext extends ParserRuleContext {
		public ConcatExprContext concatExpr() {
			return getRuleContext(ConcatExprContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public StringVarNameContext stringVarName() {
			return getRuleContext(StringVarNameContext.class,0);
		}
		public StringExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterStringExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitStringExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitStringExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringExprContext stringExpr() throws RecognitionException {
		StringExprContext _localctx = new StringExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stringExpr);
		try {
			setState(99);
			switch (_input.LA(1)) {
			case LPAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				concatExpr();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				stringLiteral();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				stringVarName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntExprContext extends ParserRuleContext {
		public LenExprContext lenExpr() {
			return getRuleContext(LenExprContext.class,0);
		}
		public IntLiteralContext intLiteral() {
			return getRuleContext(IntLiteralContext.class,0);
		}
		public IntExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterIntExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitIntExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitIntExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntExprContext intExpr() throws RecognitionException {
		IntExprContext _localctx = new IntExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_intExpr);
		try {
			setState(103);
			switch (_input.LA(1)) {
			case LPAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				lenExpr();
				}
				break;
			case INT:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				intLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotExprContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode NOT() { return getToken(KaluzaABCParser.NOT, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public NotExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterNotExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitNotExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitNotExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotExprContext notExpr() throws RecognitionException {
		NotExprContext _localctx = new NotExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_notExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(LPAR);
			setState(106);
			match(NOT);
			setState(107);
			boolExpr();
			setState(108);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndExprContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode AND() { return getToken(KaluzaABCParser.AND, 0); }
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public List<BoolExprContext> boolExpr() {
			return getRuleContexts(BoolExprContext.class);
		}
		public BoolExprContext boolExpr(int i) {
			return getRuleContext(BoolExprContext.class,i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterAndExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitAndExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndExprContext andExpr() throws RecognitionException {
		AndExprContext _localctx = new AndExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_andExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(LPAR);
			setState(111);
			match(AND);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAR) {
				{
				{
				setState(112);
				boolExpr();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InExprContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode IN() { return getToken(KaluzaABCParser.IN, 0); }
		public StringExprContext stringExpr() {
			return getRuleContext(StringExprContext.class,0);
		}
		public RegexLiteralContext regexLiteral() {
			return getRuleContext(RegexLiteralContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public InExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterInExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitInExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitInExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InExprContext inExpr() throws RecognitionException {
		InExprContext _localctx = new InExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_inExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(LPAR);
			setState(121);
			match(IN);
			setState(122);
			stringExpr();
			setState(123);
			regexLiteral();
			setState(124);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrEqualityExprContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(KaluzaABCParser.LPAR, 0); }
		public TerminalNode EQ() { return getToken(KaluzaABCParser.EQ, 0); }
		public List<StringExprContext> stringExpr() {
			return getRuleContexts(StringExprContext.class);
		}
		public StringExprContext stringExpr(int i) {
			return getRuleContext(StringExprContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(KaluzaABCParser.RPAR, 0); }
		public StrEqualityExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_strEqualityExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).enterStrEqualityExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KaluzaABCListener ) ((KaluzaABCListener)listener).exitStrEqualityExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KaluzaABCVisitor ) return ((KaluzaABCVisitor<? extends T>)visitor).visitStrEqualityExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StrEqualityExprContext strEqualityExpr() throws RecognitionException {
		StrEqualityExprContext _localctx = new StrEqualityExprContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_strEqualityExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LPAR);
			setState(127);
			match(EQ);
			setState(128);
			stringExpr();
			setState(129);
			stringExpr();
			setState(130);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
